avoid displaying a blue border on firefox3

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -177,6 +177,7 @@ html, body {
     position:absolute; 
     top:0; 
     left:0; 
+    border: 0px;
     height:100%;
 }
 
